# finance_report

./: .coverage  .coveralls.yml  .env.example  .env.production  .env.staging  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .tool-versions  AGENTS.md  LOGGING_IMPROVEMENTS.md  Makefile  PERF_OPTIMIZATION.md  README.md  STAGING_TEST_PLAN.md  TESTING_GAP_ANALYSIS.md  badge-options.md  commit_msg.txt  coverage.xml  decompose.py  docker-compose.ci-e2e.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.pr-preview.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  fix_all_dropped_acs.py  fix_boundaries.py  fix_contract.py  fix_dropped_again.py  fix_e402.py  fix_f821.py  fix_final.py  fix_final2.py  fix_layering.py  (+26 more)
apps/backend/: .coverage.J00K7NCF4L.pid93900.XQP9iMbx.H0Az7tXFH2jh  .coverage.J00K7NCF4L.pid97094.X2NTxNex.H2i2sTUH4FUh  .coverage.J00K7NCF4L.pid97095.XHcgmNlx.Hb4vwolXCNNh  .coverage.J00K7NCF4L.pid97096.XWPSTfpx.HJFG6XoQOL1h  .coverage.J00K7NCF4L.pid97097.XWL84ckx.HzRMvT1ho1bh  .dockerignore  .gitignore  .test_durations  Dockerfile  README.md  alembic.ini  lcov.info  moon.yml  pyproject.toml
apps/backend/ci/: backend-test-durations.json
apps/backend/config/: reconciliation.yaml
apps/backend/migrations/: env.py  script.py.mako
apps/backend/migrations/versions/: 0001_initial_schema.py  0002_add_chat_tables.py  0003_add_users_table.py  0004_add_name_to_users.py  0005_fix_bank_statement_transaction_status_enum.py  0005_fix_txn_status_enum.py  0005_statement_parsing_nullable_fields.py  0006_normalize_all_enums.py  0006_parse_nullable_fields.py  0006_statement_parsing_nullable_fields.py  0007_normalize_all_enums.py  0008_add_layer1_layer2_tables.py  0009_add_fx_revaluation_source_type.py  0010_add_ai_category_fields.py  0010_add_parsing_progress.py  0011_add_txn_currency_balance.py  0012_add_stage1_review.py  0013_add_consistency_checks.py  0014_add_correction_logs.py  0015_ai_ui_feedback_audit.py  0016_add_valuation_snapshots.py  0016_manual_valuation_snapshots.py  0017_investment_accounting.py  0018_source_type_priority.py  0019_add_stock_prices.py  0020_add_market_data_sync_state.py  0021_add_workflow_events.py  0022_harden_workflow_contract.py  0022_harden_workflow_event_contract.py  0023_stmt_extract_metadata.py  0024_add_workflow_sessions.py  0025_add_evidence_lineage.py  0025_add_review_run_scope.py  0026_add_normalized_email_unique_index.py  0026_add_review_run_scope.py  0026_user_email_norm_idx.py  0027_merge_review_email_heads.py  0028_statement_summaries.py  0029_drop_bank_statement_tables.py  0030_repoint_match_corr_fks.py  (+43 more)
apps/backend/scripts/: entrypoint.sh  prefect_worker_entrypoint.sh  register_prefect_deployment.py  run_migrations.sh
apps/backend/src/: __init__.py  analytics.py  auth.py  boot.py  composition.py  config.py  config_app.py  database.py  decimal_scalar.py  deps.py  env_check.py  env_smoke_test.py  logger.py  main.py  models.py  observability.py  observability_events.py  orm_registry.py  rate_limit.py  security.py  telemetry_metrics.py
apps/backend/src/advisor/: __init__.py
apps/backend/src/api/: dependencies.py  main.py  middleware.py
apps/backend/src/audit/: __init__.py  decimal_scalar.py  source_type_priority.py
apps/backend/src/constants/: error_ids.py  report_package.py  valuation_taxonomy.py
apps/backend/src/core/: auth.py  database.py
apps/backend/src/counter/: README.md  __init__.py  contract.py
apps/backend/src/extraction/: __init__.py
apps/backend/src/identity/: __init__.py
apps/backend/src/ledger/: __init__.py  ledger.contract.md
apps/backend/src/llm/: __init__.py  cassette.py  catalog.py  client.py  cost.py  db_config.py  env_config.py  factory.py  routing.py  usage.py
apps/backend/src/models/: __init__.py  _registry.py  account.py  app_config.py  base.py  chat.py  consistency_check.py  correction.py  evidence.py  journal.py  layer1.py  layer2.py  layer3.py  layer4.py  llm_config.py  market_data.py  metrics.py  ping_state.py  portfolio.py  reconciliation.py  statement.py  statement_summary.py  user.py  valuation.py  workflow.py
apps/backend/src/money/: __init__.py  adopt.py  balances.py  convert.py  currency.py  errors.py  exchange_rate.py  money.py  rounding.py  tolerance.py  wire.py
apps/backend/src/observability/: __init__.py  analytics.py  audit.py  logger.py  pii_redaction.py  runtime.py  telemetry_metrics.py
apps/backend/src/platform/: __init__.py
apps/backend/src/portfolio/: __init__.py
apps/backend/src/pricing/: __init__.py
apps/backend/src/prompts/: __init__.py  ai_advisor.py  reconciliation.py  statement.py
apps/backend/src/quantity/: __init__.py  errors.py  quantity.py  unit.py  wire.py
apps/backend/src/ratio/: __init__.py  errors.py  ratio.py  wire.py
apps/backend/src/reconciliation/: __init__.py
apps/backend/src/reporting/: __init__.py
apps/backend/src/routers/: __init__.py  accounts.py  ai_feedback.py  ai_models.py  app_config.py  assets.py  audit.py  auth.py  chat.py  classifications.py  corrections.py  evidence.py  income.py  journal.py  llm.py  (+11 more)
apps/backend/tests/: README.md  conftest.py  factories.py  locustfile.py  statement_ingestion.py  test_account_service_unit.py  test_accounting.py  test_accounting_balances.py  test_accounting_coverage_boost.py  test_accounting_integration.py  test_ai_advisor_service.py  test_ai_models_integration.py  test_api_endpoints.py  test_api_main.py  test_api_middleware.py  test_asset_service.py  test_assets_router.py  test_auth.py  test_auth_router.py  test_auth_router_unit.py  test_boot.py  test_chat_router.py  test_ci_config.py  test_classification_service.py  test_config.py  test_core_auth.py  test_core_config.py  test_core_database.py  test_coverage_boost.py  test_critical_epic002.py  test_critical_epic003.py  test_critical_epic004.py  test_csv_parsing.py  test_database.py  test_decimal_safety.py  test_deduplication.py  test_delete_endpoints.py  test_dual_write_layer2.py  test_env_check.py  test_extraction.py  (+39 more)
(+2915 files in other folders)
