[project]
name = "finance-report-backend"
version = "0.1.0"
description = "Finance Report Backend - FastAPI + SQLAlchemy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=75"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "src/models/__init__.py",
    "src/schemas/__init__.py",
    "src/schemas/user.py",
    "src/services/__init__.py",
    "src/routers/__init__.py",
    "src/routers/users.py",
    "src/services/extraction.py",
    "src/prompts/*",
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
