[project]
name = "finance-report-backend"
version = "0.1.0"
description = "Finance Report Backend - FastAPI + SQLAlchemy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "psycopg2-binary>=2.9.9",
    "structlog>=25.5.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "bcrypt==4.0.1",
    "httpx-sse>=0.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "reportlab>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "locust>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # Line too long - handled by formatter, 120 is reasonable
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=95 -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "perf: marks tests requiring production-like performance validation",
    "integration: marks tests that hit external APIs (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests with Playwright (deselect with '-m \"not e2e\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "src/models/__init__.py",
    "src/schemas/__init__.py",
    "src/schemas/user.py",
    "src/services/__init__.py",
    "src/routers/__init__.py",
    "src/routers/users.py",
    "src/services/extraction.py",
    "src/prompts/*",
    "src/main.py",
    "src/env_smoke_test.py",
    "src/env_check.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
