[project]
name = "finance-report-backend"
version = "0.1.0"
description = "Finance Report Backend - FastAPI + SQLAlchemy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "psycopg2-binary>=2.9.9",
    "structlog>=25.5.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "bcrypt==4.0.1",
    "httpx-sse>=0.4.3",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-split>=0.8.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "reportlab>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "locust>=2.20.0",
    "freezegun>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # Line too long - handled by formatter, 120 is reasonable
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: Long-running tests (>1s)",
    "perf: Performance tests",
    "e2e: End-to-end UI tests with Playwright",
]

# Default: Run all tests except slow/perf/e2e
# Note: -n 4 for local (fixed), CI uses -n auto for ephemeral runners
addopts = [
    "-v",
    "-ra",
    "-n", "4",
    "-m", "not e2e and not slow and not perf",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=99",
]

[tool.coverage.run]
# Blacklist approach: count all .py files as code except test files
# Test files identified by path patterns: /test/, /tests/, test_, _test.py
source = ["src"]
omit = [
    "__init__.py",
    "models/__init__.py",
    "schemas/__init__.py",
    "schemas/user.py",
    "services/__init__.py",
    "routers/__init__.py",
    "routers/users.py",
    "main.py",
    "tests/**",
    "migrations/**",
]
